# KairoSIMD

./: CMakeLists.txt  README.md
src/: KairoSIMD.cppm
tests/: benchmark.cpp  smoke.cpp
